<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amigo_WidgetDemoL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Amigo公共控件演示</string>
    
    <string name="normal_switch">正常状态</string>
    <string name="disenable_switch_off">关闭的disable状态</string>
    <string name="disenable_switch_on">开启的disable状态</string>
    
    <string name="searchmenu_options1">实时Search</string>
    <string name="searchmenu_options2">触发Search</string>
    <string name="searchmenu_options3">语音Search</string>
    
    <string name="prgress_hint">可预知进度条</string>
    <string name="prgress_in_hint">不可预知进度条</string>
    
    <string name="jiahao">+</string>
    <string name="jianhao">-</string>
    
    <string name="yuhu">用户:</string>
    <string name="passwork">密码:</string>
    
    <string name="cancel">Normal Button</string>
    <string name="load">按钮Disable状态</string>
    <string name="corner_btn">圆角按钮</string>
    
    <string name="action_menu_demo">ActionMenuDemo</string>
    <string name="title1">复制</string>
    <string name="title2">删除</string>
    <string name="title3">剪贴</string>
    <string name="title4">分享</string>
    <string name="title5">新建</string>
    <string name="title6">添加</string>
    <string name="title7">Test1</string>
    <string name="title8">Test2</string>
    <string name="title9">Test3</string>
    <string name="title10">Test4</string>
    <string name="new_message">New Message</string>
    <string name="send_error_report">Send Error Report</string>
    <string name="add_new_record">Add New Record</string>
    
    <string name="pager_content">ViewPager内容</string>
    
    <string name="gn_search_hint">搜索信息</string>
    <string name="gn_actionbar_normal_hint">默认显示logo和title</string>
    <string name="gn_actionbar_normal_title">My Title</string>
    <string name="gn_actionbar_back_hint">点击Actionbar返回上级页面</string>
    <string name="gn_actionbar_custom_hint">设置自定义AmigoActionBar</string>
    <string name="gn_actionbar_custom_hint_off">未用Custom</string>
    <string name="gn_actionbar_custom_hint_on">使用Custom</string>
    <string name="gn_actionbar_overlay_hint1">被遮盖文字</string>
    <string name="gn_actionbar_overlay_hint2">ActionBar的overlay布局</string>
    <string name="gn_actionmode_hint_off">未用ActionMode</string>
    <string name="gn_actionmode_hint_on">使用ActionMode</string>
    <string name="gn_actionbar_options_menu_as_up">OptionsMenu显示在顶部ActionBar上</string>
    
    <string name="menu_settings">Settings</string>
    <string name="tv_main_no1">TAB1</string>
    <string name="tv_main_no2">TAB2</string>
    <string name="tv_main_no3">TAB3</string>
     <string name="amigoSpinner">AmigoSpinnerDemo</string>
    
    <string name="btn_loading_infinity">不可预知加载</string>
    <string name="btn_loading">可预知加载</string>
    <string name="delete">删除</string>
    <string name="btn_more">更多</string>
    <string name="btn_imagebutton">Imagebutton</string>
    
    <string name="unread">3</string>
    <string name="unread2">19</string>
    
    <string name="type10_level1">一行文字前后带图标</string>
    <string name="type11_level1">一行文字前面带图标</string>
    <string name="type12_level1">一行文字</string>
    <string name="type20_level1">二行文字前后带图标第二行带结尾文字</string>    
    <string name="type21_level1">二行文字前面带图标第二行带结尾文字</string>
    <string name="type22_level1">二行文字前面带图标</string>
    <string name="type23_level1">二行文字</string>
    <string name="type30_level1">三行文字前后带图标</string>
    <string name="type31_level1">三行文字前面带图标</string>
    <string name="type32_level1">三行文字</string>
    <string name="type_level2">textlevel2textlevel2textlevel2textlevel2textlevel2</string>
    <string name="text_size_demo_18sp">18sp&#160;&#160;&#160;中文字体大小&#160;&#160;&#160;ABCJ&#160;&#160;&#160;abcj</string>
    <string name="text_size_demo_16sp">16sp&#160;&#160;&#160;中文字体大小&#160;&#160;&#160;ABCJ&#160;&#160;&#160;abcj</string>
    <string name="text_size_demo_14sp">14sp&#160;&#160;&#160;中文字体大小&#160;&#160;&#160;ABCJ&#160;&#160;&#160;abcj</string>
    <string name="text_size_demo_12sp">12sp&#160;&#160;&#160;中文字体大小&#160;&#160;&#160;ABCJ&#160;&#160;&#160;abcj</string>
    <string name="type_tail">textTail</string>
    <string name="multiple_select_text">已选择%1$s个</string>
    <string name="multiple_select_all">全选</string>
    <string name="cancel_multiple_select_all">取消全选</string>
    <string name="amigo_edit_text_tip">橙色背景下效果,输入框文字颜色应用自己设置为白色，默认为黑色</string>
    <string name="content_color_primary_on_appbar_t1">content_color_primary_on_appbar_t1</string>
    <string name="content_color_secondary_on_appbar_t2">content_color_secondary_on_appbar_t2</string>
    <string name="content_color_thirdly_on_appbar_t3">content_color_thirdly_on_appbar_t3</string>
    <string name="content_olor_forthly_on_appbar_t4">content_olor_forthly_on_appbar_t4</string>
    <string name="content_color_primary_on_backgroud_c1">content_color_primary_on_backgroud_c1</string>
    <string name="content_color_secondary_on_backgroud_c2">content_color_secondary_on_backgroud_c2</string>
    <string name="content_color_thirdly_on_backgroud_c3">content_color_thirdly_on_backgroud_c3</string>
    <string name="theme_text">theme_text</string>
    <string name="progress_bar_large">大</string>
    <string name="progress_bar_medium">中</string>
    <string name="progress_bar_small">小</string>
    
    <string name="amigoSpinner_dialog">amigospinnerMode = dialog</string>
    <string name="amigoSpinner_dropdown">amigospinnerMode = dropdown</string>
    <string name="Page1">Page1</string>
    <string name="Page2">Page2</string>
    <string name="Page3">Page3</string>
    <string name="Page4">Page4</string>
    
    <string name="frameworkversion">FrameworkVersion</string>
    <string name="forcetouch_btn1">Button1</string>
    <string name="forcetouch_btn2">Button2</string>
    <string name="forcetouch_btn3">Button3</string>
    <string name="forcetouch_btn4">Button4</string>
    <string name="forcetouch_btn5">Button5</string>
    <string name="forcetouch_btn6">Button6</string>
    <string name="forcetouch_text1">text1</string>

</resources>
