<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/title1"
        android:icon="@drawable/scan"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/title1">
        <menu>
            <item
                android:id="@+id/title7"
                android:orderInCategory="100"
                android:title="@string/title3"/>
            <item
                android:id="@+id/title8"
                android:orderInCategory="100"
                android:title="@string/title4"/>
        </menu>
    </item>
    <item
        android:id="@+id/title2"
        android:icon="@drawable/scan"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title2"/>
    <item
        android:id="@+id/title3"
        android:icon="@drawable/scan"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title3"/>
    <item
        android:id="@+id/title4"
        android:icon="@drawable/scan"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title4"/>
    <item
        android:id="@+id/title5"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title5"/>
    <item
        android:id="@+id/title6"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title6"/>
    <item
        android:id="@+id/title9"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title9"/>
    <item
        android:id="@+id/title10"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title10"/>
    <item
        android:id="@+id/title11"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title7"/>
    <item
        android:id="@+id/title12"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title8"/>
    
</menu>