<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/amigo_actionbar_background_color_light_normal"
        android:orientation="vertical"
        android:padding="10dp" >

        <amigoui.widget.AmigoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_color_primary_on_appbar_t1"
            android:textColor="@color/amigo_content_color_primary_on_appbar_t1"
            android:textSize="20sp" />

        <amigoui.widget.AmigoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_color_secondary_on_appbar_t2"
            android:textColor="@color/amigo_content_color_secondary_on_appbar_t2"
            android:textSize="20sp" />

        <amigoui.widget.AmigoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_color_thirdly_on_appbar_t3"
            android:textColor="@color/amigo_content_color_thirdly_on_appbar_t3"
            android:textSize="20sp" />

        <amigoui.widget.AmigoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_olor_forthly_on_appbar_t4"
            android:textColor="@color/amigo_content_olor_forthly_on_appbar_t4"
            android:textSize="20sp" />
    </LinearLayout>

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/theme_text"
        android:textSize="20sp" />

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/content_color_primary_on_backgroud_c1"
        android:textColor="@color/amigo_content_color_primary_on_backgroud_c1"
        android:textSize="20sp" />

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_color_secondary_on_backgroud_c2"
        android:textColor="@color/amigo_content_color_secondary_on_backgroud_c2"
        android:textSize="20sp" />

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_color_thirdly_on_backgroud_c3"
        android:textColor="@color/amigo_content_color_thirdly_on_backgroud_c3"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/amigo_actionbar_background_color_light_normal"
        android:orientation="vertical"
        android:padding="10dp" >

        <amigoui.widget.AmigoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size_demo_18sp"
            android:textSize="18sp" />

        <amigoui.widget.AmigoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size_demo_16sp"
            android:textSize="16sp" />

        <amigoui.widget.AmigoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size_demo_14sp"
            android:textSize="14sp" />

        <amigoui.widget.AmigoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size_demo_12sp"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>