<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="5dip"
    android:paddingRight="5dip" >

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prgress_in_hint" />

    <amigoui.widget.AmigoProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prgress_hint" />

    <amigoui.widget.AmigoProgressBar
        android:id="@+id/gn_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:secondaryProgress="75" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <amigoui.widget.AmigoButton
            android:id="@+id/jian_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dip"
            android:text="@string/jianhao" />

        <amigoui.widget.AmigoButton
            android:id="@+id/jia_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jiahao" />
    </LinearLayout>

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_bar_large" />

    <amigoui.widget.AmigoProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_bar_medium" />

    <amigoui.widget.AmigoProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <amigoui.widget.AmigoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_bar_small" />

    <amigoui.widget.AmigoProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

</LinearLayout>