<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GnFragmentDemo" >

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world" 
        />    -->

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:flipInterval="30" />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignBottom="@id/vp_main">
        <TextView 
            android:id="@id/tv_no1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_main_no1"
            android:textSize="@dimen/tv_size"/>
        <TextView 
            android:id="@id/tv_no2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_main_no2"
            android:textSize="@dimen/tv_size"/>
        
        <TextView 
            android:id="@id/tv_no3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_main_no3"
            android:textSize="@dimen/tv_size"/>
    </LinearLayout>
</RelativeLayout>