<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
         <TextView
        android:id="@+id/forceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btn_more"
        android:textSize="30dp" />
    -->

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/forcetouch_btn1"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:text="@string/forcetouch_btn2"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:text="@string/forcetouch_btn3"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:text="@string/forcetouch_btn4"
        android:textSize="30dp" />

    <!-- <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/forcetouch_btn5"
        android:textSize="30dp" /> -->

    <!--
         <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Button6"
        android:textSize="30dp" />
    -->

    <!-- <TextView
        android:id="@+id/text1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/action_menu_text_color"
        android:text="@string/forcetouch_text1"
        android:textSize="30dp" /> -->

    <ImageView
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon2"
        android:clickable="true" />
    
    <ImageView
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button4"
        android:layout_centerInParent="true"
        android:background="@drawable/icon1"
        android:clickable="true" />

    <ImageView
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:background="@drawable/icon1"
        android:clickable="true" />

    <ImageView
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button9"
        android:layout_below="@+id/button1"
        android:background="@drawable/icon2"
        android:clickable="true" />

    <ImageView
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button8"
        android:layout_marginEnd="20dp"
        android:background="@drawable/icon2"
        android:clickable="true" />

    <ImageView
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignStart="@+id/button12"
        android:background="@drawable/icon1"
        android:clickable="true" />

</RelativeLayout>